--- a/app/assets/stylesheets/components/_background.scss
+++ b/app/assets/stylesheets/components/_background.scss
@@ -12,6 +12,7 @@
   position: fixed;
   width: 100%;
   height: 100%;
+  z-index: 1;
 }
 
 .lines {
@@ -32,6 +33,7 @@
 
 .line1 {
   left: 9vw;
+  z-index: 2;
 }
 
 .line2 {
@@ -48,6 +50,7 @@
 
 .line5 {
   left: 91vw;
+  z-index: 2;
 }
 
 .lines-horizontal {
