--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,9 @@
 
 
 <div class="home-content align-items-center d-flex justify-content-center">
+
+      <%= image_tag ('centre.png'), class: 'img-home' %>
+
   <div class="navtop">
     <div class="d-flex justify-content-between">
       <div class="am20">AM20.</div>
@@ -24,7 +27,7 @@
   </div>
 
   <div class="scroll-container">
-    <div class="serif-text" style="margin-bottom: 3vh;">Scroll</div>
+    <div class="serif-text" style="margin-bottom: 3vh; margin-left: 1.3vw">Scroll</div>
     <%= image_tag 'linescroll.png', height: 60, width: 2, class: 'arrow-scroll' %>
   </div>
 </div>
