--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -10,6 +10,7 @@ $black: #252525;
 $light-black: #676767;
 $light-gray: #F4F4F4;
 $light-red: #d66e6e;
+$light-pink: #ec8c8c;
 $beige: #fbe9e2;
 $dark-beige: #efe9e6;
 $ivoire: #F6F5F5;
