--- a/app/assets/stylesheets/components/_background.scss
+++ b/app/assets/stylesheets/components/_background.scss
@@ -12,7 +12,6 @@
   position: fixed;
   width: 100%;
   height: 100%;
-  z-index: 1;
 }
 
 .lines {
@@ -67,7 +66,7 @@
 }
 
 .line-h2 {
-  left: 94.9vw;;
+  left: 94.6vw;
   height: 1px;
   width: 2%;
   top: 80vh;
