--- a/app/assets/stylesheets/components/_menu.scss
+++ b/app/assets/stylesheets/components/_menu.scss
@@ -23,14 +23,14 @@
 
 .paris {
   position: fixed;
-  z-index: 3;
+  z-index: 1;
   -webkit-transform: rotate(90deg);
   transform: rotate(90deg);
-  right: 40px;
-  margin-top: 90vh;
+  left: 94vw;
+  bottom: 5vh;
   transition: 1s color ease;
   font-size: 12px;
-  letter-spacing: 3px;
+  letter-spacing: 1px;
   font-weight: 300;
 }
 
@@ -49,7 +49,7 @@
   font-size: 12px;
   letter-spacing: 3px;
   font-weight: 300;
-  margin-top: 3.5vh;
+  margin-top: 3.8vh;
 }
 
 .navtop-circle {
@@ -68,3 +68,39 @@
   transition: all 1s;
 }
 
+//SOCIALS
+
+.social-container {
+  position: fixed;
+  left: calc(100vw - 8.5vw);
+  top: 37vh;
+  z-index: 1;
+  height: 200px;
+  width: 100px;
+  border-top-left-radius: 100px;
+  border-bottom-left-radius: 100px;
+}
+
+.list-social-icons {
+  margin: 24% auto;
+  text-decoration: none;
+  list-style-type: none;
+  position: absolute;
+  left: 14px;
+}
+
+.social-icon {
+  margin-top: 18px;
+  margin-bottom: 18px;
+  color: $black;
+  transition: 1s color ease;
+  &:hover {
+    transition: 0.3s;
+    color: $rouille;
+    text-decoration: none;
+    }
+}
+
+.social-icon-red {
+  color: $light-red;
+}
