--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -7,6 +7,7 @@
   position: relative;
   width: 100vw;
   background: linear-gradient(0deg, rgba(248, 245, 245, 1) 0%, rgba(234,228,226,1) 100%);
+  z-index: -1;
 }
 
 .home-bio {
@@ -20,7 +21,7 @@
 
 // SOME PROJECTS
 
-.home-projects-details {
+.home-step-details {
   padding-top: 10vh;
 }
 
@@ -59,11 +60,10 @@
   font-weight: 800;
   font-family: $serif;
   left: 10vw;
-  max-width: 70vw;
-  margin-top: -200px;
+  max-width: 43vw;
+  margin-top: -52px;
   font-size: 17vw;
   line-height: 0.9;
-  margin-bottom: 200px;
 }
 
 
