--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,41 +1,21 @@
 
 
 <div class="home-content align-items-center d-flex justify-content-center">
-
-      <%= image_tag ('centre.png'), class: 'img-home' %>
-
   <div class="navtop">
     <div class="d-flex justify-content-between">
       <div class="am20">AM20.</div>
       <div class="navtop-circle"></div>
     </div>
   </div>
-
-  <div class="line-container">
-    <div class="lines lines-black line1"></div>
-    <div class="lines lines-black line5"></div>
-    <div class="lines-horizontal lines-black line-h1"></div>
-    <div class="lines-horizontal lines-black line-h2"></div>
-  </div>
-
-  <div class="social-container">
-    <ul class="list-social-icons">
-      <li><%= link_to "", 'https://github.com/ambremgt', target: '_blank', class: "fab fa-github fa-lg social-icon"%></li>
-      <li><%= link_to "", 'https://www.linkedin.com/in/ambre-margerit-33441ba8/', target: '_blank', class: "fab fa-linkedin-in fa-lg social-icon"%></li>
-      <li><%= link_to "", 'https://dribbble.com/Ambremgt', target: '_blank', class: "fab fa-dribbble fa-lg social-icon"%></li>
-    </ul>
-  </div>
-
+  <%= image_tag ('centre.png'), class: 'img-home' %>
   <div class="scroll-container">
     <div class="serif-text" style="margin-bottom: 3vh; margin-left: 1.3vw">Scroll</div>
-    <%= image_tag 'linescroll.png', height: 60, width: 2, class: 'arrow-scroll' %>
+    <%= image_tag 'linescroll.png', class: 'arrow-scroll' %>
   </div>
 </div>
 
 <div class="wrap-2"><canvas id="liquid">
 </canvas></div>
-
-
 
 <div class="home-bio row align-items-center d-flex justify-content-center">
   <div class="col-12 col-md-4 col-sm-10 order-1 order-md-0" style="margin-left: 5vh;">
@@ -54,21 +34,26 @@
       <p><strong>My goal is to help people build better</p>
       <p>and more meaningful products.</strong></p>
 
-      <%= link_to '/about' do %>
-        <div class="scroll-container-more">
-          <%= image_tag 'red-ellipse.png', height: 70, width: 70, class: 'circle-scroll-more float-right' %>
-          <%= image_tag 'red-arrow.png', height: 20, width: 20, class: 'arrow-scroll-incline float-right' %>
-        </div>
-      <% end %>
-
     </div>
   </div>
+
   <div class="image-block col-12 col-md-4 order-0 order-md-1">
     <%= image_tag ('ambrewagon.jpg'), class: 'profile-picture'  %>
   </div>
 </div>
 
-  <div class="home-projects-details d-flex flex-column">
+
+      <section class="portfolio-experiment">
+      <a href="/about">
+        <span class="text">ABOUT</span>
+        <span class="line -right"></span>
+        <span class="line -top"></span>
+        <span class="line -left"></span>
+        <span class="line -bottom"></span>
+      </a>
+    </section>
+
+  <div class="home-step-details d-flex flex-column">
     <h1 class="d-flex justify-content-end some-projects">LAST PROJECTS</h1>
     <div class="d-flex justify-content-end red-text_italic wid">What I do?</div>
     <div class="red-text-min mx-auto home-step">
@@ -86,11 +71,34 @@
 
 <section class="projet-section">
   <section class="img-section">
-    <div class="home-cocktail-img" style="background-image: url(<%= asset_path 'cocktails.jpeg' %>);"></div>
-    <div class="home-camera-img" style="background-image: url(<%= asset_path 'camera.jpg' %>);"></div>
-    <div class="home-students-img" style="background-image: url(<%= asset_path 'students.jpeg'%>);"></div>
+    <%= link_to '/projets/10' do %>
+      <div class="home-cocktail-img" style="background-image: url(<%= asset_path 'cocktails.jpeg' %>);">
+        <div class="home-projet-detail" style="top:50px">
+          <div class="home-projet-detail-name">Fancy Cocktail</div>
+          <div class="home-projet-detail-description">Create your own recepies</div>
+        </div>
+      </div>
+    <% end %>
+
+    <%= link_to '/projets/9' do %>
+    <div class="home-camera-img" style="background-image: url(<%= asset_path 'camera.jpg' %>);">
+      <div class="home-projet-detail">
+        <div class="home-projet-detail-name">Fancy Cocktail</div>
+        <div class="home-projet-detail-description">Create your own recepies</div>
+      </div>
+    </div>
+    <% end %>
+
+    <%= link_to '/projets/8' do %>
+    <div class="home-students-img" style="background-image: url(<%= asset_path 'students.jpeg'%>);">
+      <div class="home-projet-detail">
+        <div class="home-projet-detail-name">Fancy Cocktail</div>
+        <div class="home-projet-detail-description">Create your own recepies</div>
+      </div>
+    </div>
+   <% end %>
+
   </section>
   <div class="title-end-home">Oh la la.</div>
 </section>
-
 
